# google-proxy

./: .gitignore  Cargo.toml  README.md  flake.nix  init.json  manifest.toml
.github/actions/release-actor/: action.yml
.github/workflows/: release.yml
src/: bindings.rs  lib.rs  tests.rs
src/api/: gemini.rs  mod.rs
src/handlers/: message.rs
src/types/: gemini.rs  gemini.rs.backup  mod.rs  state.rs
wit/: world.wit
