[package]
name = "google-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "colinrozzi:google-proxy"
target = "colinrozzi-wit:google-proxy/default@0.0.1"

[dependencies]
serde_json = "1.0.138"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
toml = "0.7.6"
base64 = "0.21.0"
url = "2.3.1"
genai-types = "*"
mcp-protocol = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
